--- a/src/SchemaUpdater/SchemaUpdater.csproj
+++ b/src/SchemaUpdater/SchemaUpdater.csproj
@@ -61,7 +61,9 @@
     <Compile Include="Types\SQLDbTypeMap.cs" />
     <Compile Include="Updates\NewTable\NewTableUpdate.cs" />
     <Compile Include="Updates\NewTable\NewTableUpdateFactory.cs" />
+    <Compile Include="Updates\NewTable\SQLiteNewTableUpdate.cs" />
     <Compile Include="Updates\NewTable\SQLNewTableUpdate.cs" />
+    <Compile Include="PrimaryKey.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
