--- a/src/SchemaUpdater/SchemaUpdater.csproj
+++ b/src/SchemaUpdater/SchemaUpdater.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>SchemaUpdater</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,6 +37,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.SQLite, Version=1.0.108.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\System.Data.SQLite.Core.1.0.108.0\lib\net46\System.Data.SQLite.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,6 +52,8 @@
     <Compile Include="Database.cs" />
     <Compile Include="DatabaseProvider.cs" />
     <Compile Include="DatabaseVersion.cs" />
+    <Compile Include="Exceptions\ErrorCodes.cs" />
+    <Compile Include="Exceptions\SchemaUpdaterException.cs" />
     <Compile Include="IUpdate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Types\SQLiteDbTypeMap.cs" />
@@ -59,6 +66,10 @@
     <Compile Include="Types\DbTypeMapFactory.cs" />
     <Compile Include="Types\IDbTypeMap.cs" />
     <Compile Include="Types\SQLDbTypeMap.cs" />
+    <Compile Include="Updates\CreateDatabase\CreateDatabaseUpdate.cs" />
+    <Compile Include="Updates\CreateDatabase\CreateDatabaseUpdateFactory.cs" />
+    <Compile Include="Updates\CreateDatabase\SQLCreateDatabaseUpdate.cs" />
+    <Compile Include="Updates\CreateDatabase\SQLiteCreateDatabaseUpdate.cs" />
     <Compile Include="Updates\NewTable\NewTableUpdate.cs" />
     <Compile Include="Updates\NewTable\NewTableUpdateFactory.cs" />
     <Compile Include="Updates\NewTable\SQLiteNewTableUpdate.cs" />
@@ -69,6 +80,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\packages\System.Data.SQLite.Core.1.0.108.0\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\..\packages\System.Data.SQLite.Core.1.0.108.0\build\net46\System.Data.SQLite.Core.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\..\packages\System.Data.SQLite.Core.1.0.108.0\build\net46\System.Data.SQLite.Core.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\System.Data.SQLite.Core.1.0.108.0\build\net46\System.Data.SQLite.Core.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
